# reward_collision_plugin_ros2

./: README.md
collision_reward/: CMakeLists.txt  package.xml
collision_reward/include/collision_reward/: collision_reward_plugin.hpp
collision_reward/launch/: robot.launch.py  robot_description_publisher.py  spawn_human_ros2.launch.py  spawn_pirat_ros2.launch.py
collision_reward/scripts/: spawn_object.py
collision_reward/src/: collision_reward_plugin.cpp
collision_reward/urdf/: human.urdf.xacro  pirat.urdf.xacro
